refactor auth module, improvements in user and role entities, added roles for users